--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
 	<meta charset="UTF-8">
 	<title></title>
 </head>
-<!-- <body style="background-image: url('image/icon.png');"> -->
-<body>
+<body style="background-color:black;">
 	<div class="container mt-5 mb-5">	
 		<div class="row justify-content-center">
-			<div class="col text-center mb-4">
-				<button id="button" class="btn btn-warning">GO SOMEWHERE</button>
-			</div>
+				<div id="spinner" class="spinner-grow text-light" role="status"></div>
 		</div>
 		<div class="row justify-content-center">
 			<div class="col text-center">
